--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -17,7 +17,7 @@ jobs:
           submodules: true
 
       # ==========================
-      # 🔧 BACKEND
+      # BACKEND
       # ==========================
       - name: Configurar Node.js para backend
         uses: actions/setup-node@v4
@@ -40,7 +40,7 @@ jobs:
           npm test
 
       # ==========================
-      # 🎨 FRONTEND
+      # FRONTEND
       # ==========================
       - name: Instalar dependencias frontend
         run: |
@@ -53,7 +53,7 @@ jobs:
           npm run build
 
       # ==========================
-      # 🐳 DOCKER BUILD + PUSH
+      # DOCKER BUILD + PUSH
       # ==========================
       - name: Iniciar sesión en DockerHub
         uses: docker/login-action@v3
