--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,40 @@
+# Environment variables
 .env
+.env.local
+.env.*.local
+
+# Node modules
+node_modules/
+
+# Build outputs
+dist/
+build/
+*.log
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Docker
+docker-compose.override.yml
+
+# Temporary files
+*.tmp
+*.temp
+*.bak
+.cache/
+
+# Documentation temp files (keep only README.md)
+*DEMO*.md
+*GUIA*.md
+*QUERIES*.md
+*CAPTURAS*.md
+*QUICKSTART*.md
+*OBSERVABILITY*.md
